Bugfix/web 3164 extra white space

--- a/client/style/core/_typography.scss
+++ b/client/style/core/_typography.scss
@@ -73,7 +73,7 @@ p.no-margin {
 }
 
 .render_line_breaks {
-  white-space: pre-wrap;
+  white-space: normal;
 }
 
 a {
